Mainly worked on TODOs
went through all the todos and fixed stuff if i could; added a few comments on todos where it was not clear for me what should be done there.
deleted the Data class since we decided to use DataStatic to avoid any possible confusion and deleted Logic class since it had only duplicate functionality.